[metadata]
name = jockmkt-sdk
version = 0.2.9.59
author = Alex Friedman
author_email = nysu.gfx@gmail.com
description = A basic package allowing the user to interact with Jock MKTs API
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/nysugfx/jockmkt-sdk
project_urls =
    BugTracker = https://github.com/nysugfx/jockmkt-sdk/issues
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
setup_requires =
    requests>=0.27.1
    pytest~=7.1.2
    certifi>=2022.9.24
    websockets>=10.3

install_requires =
    requests>=0.27.1
    pytest~=7.1.2
    certifi>=2022.9.24
    websockets>=10.3

[options.packages.find]
where = src